Adding limit for fetching coins
